# production-fastapi-docker-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  supervisord.conf
.cursor/rules/: agent-workflow.mdc  backend-domain-pattern.mdc  dry-rules.mdc  frontend-feature-pattern.mdc
.github/workflows/: ci.yaml  release.yaml
app/: main.py
app/core/: database.py  models.py  settings.py
app/domains/project/: schemas.py  views.py
app/domains/task/: models.py  schemas.py  views.py
app/project/: views.py
backend/: .pre-commit-config.yaml  manage.py  pyproject.toml  ty.toml  wait-for
backend/app/: conftest.py  main.py
backend/app/core/: auth.py  broker.py  database.py  exceptions.py  models.py  schemas.py  settings.py  viewsets.py
backend/app/core/fields/: schema_field.py
backend/app/core/services/: crypto_service.py  logger.py  s3_service.py  websocket_service.py
backend/app/core/tests/: test_health.py
backend/app/core/utils/: get_details_from_exception.py  process_state_to_model.py  set_many_to_many.py
backend/app/domains/auth/: schemas.py  views.py
backend/app/domains/auth/services/: auth_service.py
backend/app/domains/organization/: filters.py  models.py  schemas.py  views.py
backend/app/domains/organization/services/: organization_service.py  organization_websocket_service.py
backend/app/domains/organization/tests/: test_organization.py
backend/app/domains/user/: filters.py  models.py  schemas.py  views.py
backend/app/scripts/: __init__.py  create_superuser.py
backend/app/shared/permissions/: is_superuser.py
backend/app/shared/services/: entity_resolver.py  filter_objects_manager.py  owned_data_provider.py  websocket_service.py
backend/app/shared/utils/: async_task.py  round_number.py
backend/migrations/: 0001_initial.py
backend/migrations/models/: 0001_initial.py
frontend/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/assets/styles/: global.scss  tailwind.css  template.scss  variables.scss
frontend/app/features/auth/repos/: authRepo.ts
frontend/app/features/auth/views/: AuthView.vue
frontend/app/features/organization/components/: OrganizationPicker.vue
frontend/app/features/organization/composables/: useOrganization.ts
frontend/app/features/organization/models/: organization.ts  organizationUser.ts
frontend/app/features/organization/repos/: organizationRepo.ts  organizationUserRepo.ts
frontend/app/features/organization/views/: OrganizationDetailView.vue  OrganizationListView.vue  OrganizationMembersList.vue
frontend/app/features/setup/components/: SetupCard.vue
frontend/app/features/user/components/: UserTokensSection.vue
frontend/app/features/user/models/: user.ts  userToken.ts
frontend/app/features/user/repos/: userRepo.ts  userTokenRepo.ts
frontend/app/features/user/views/: UserDetailView.vue  UserListView.vue
frontend/app/layouts/: default.vue  settings.vue  setup.vue
frontend/app/middleware/: auth-redirect.global.ts  setup.global.ts
frontend/app/pages/: auth.vue  home.vue  settings.vue
frontend/app/pages/home/: index.vue
frontend/app/pages/home/setup/: index.vue
frontend/app/pages/settings/: index.vue  profile.vue
frontend/app/pages/settings/organizations/: [id].vue  index.vue
frontend/app/pages/settings/users/: [id].vue  index.vue
frontend/app/plugins/: api.ts
frontend/app/shared/components/: ImageLightbox.client.vue
frontend/app/shared/components/labels/: DataLabel.vue  DateLabel.vue  DurationLabel.vue
frontend/app/shared/components/layout/: AppLayout.vue  AppPageLayout.vue
frontend/app/shared/composables/: useActionState.ts  useDate.ts  useListEvents.ts  useNotify.ts  useRepo.ts  useSelectData.ts  useWebSocket.ts
frontend/app/shared/stores/: lightboxStore.ts  useSetupStore.ts
frontend/app/shared/toolkits/authentication/: authAppRepo.ts  authAppTokens.ts  authStorage.ts  authTokenPairCodec.ts  types.ts  utils.ts
frontend/app/shared/toolkits/repo/: appApi.ts  appModel.ts  appPagination.ts  appRepo.ts  types.ts
frontend/app/shared/types/: label-types.ts  result-types.ts
frontend/app/shared/ui/: preset.ts
frontend/app/shared/ui/app/: AppAvatar.vue  AppBlock.vue  AppButton.vue  AppCheckbox.vue  AppColorPicker.vue  AppColumn.vue  AppConfirmModal.vue  AppDatePicker.vue  AppEditor.vue  AppImageLightbox.client.vue  AppInput.vue  AppLabel.vue  AppList.vue  AppModal.vue  AppMultiSelect.vue  AppNotify.vue  AppPopover.vue  AppSection.vue  AppSelect.vue  AppTabPanel.vue  AppTabs.vue  AppTextarea.vue  AppTitle.vue
frontend/app/shared/utils/: dateUtils.ts  fileIconUtils.ts  fileUtils.ts  filterUtils.ts  labelUtils.ts  numberUtils.ts  repoUtils.ts
frontend/app/shared/views/: UIView.vue
frontend/modules/base-auth/: index.ts  types.ts
frontend/server/utils/: cookie.ts
(+29 files in other folders)
